--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,8 @@ db.sqlite3
 identifier.sqlite
 backend_e_commerce/config/settings/secrets.json
 
-backend_e_commerce/*/migrations/*
-!backend_e_commerce/*/migrations/__init__.py
+#backend_e_commerce/*/migrations/*
+#!backend_e_commerce/*/migrations/__init__.py
 .idea/*
 .vscode/*
 backend_e_commerce/media/*
